--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "mocha": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/bryan89tran/CodeChallenges#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^6.0.2"
   },
   "dependencies": {
